--- a/ABOUT.html
+++ b/ABOUT.html
@@ -12,8 +12,8 @@
         <nav class="navbar">
             <div class="logo">DaoVibes</div>
             <ul>
-                <li><a href="https://hayaton74.github.io/Daovibes/">HOME</a></li>
-                <li><a href="https://hayaton74.github.io/Daovibes/#ABOUT">ABOUT</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="ABOUT.html">ABOUT</a></li>
                 <li><a href="file:///F:/imk%20p/blog%20pribadi/SERVICE.html">SERVICES</a></li>
                 <li><a href="file:///F:/imk%20p/blog%20pribadi/CONTACT.html">CONTACT</a></li>
             
