--- a/CONTACT.html
+++ b/CONTACT.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - DaoVibes</title>
-    <link rel="stylesheet" href="F:\imk p\blog pribadi\style.css">
+    <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
       <!-- Header -->
@@ -12,10 +12,10 @@
         <nav class="navbar">
             <div class="logo">DaoVibes</div>
             <ul>
-                <li><a href="file:///F:/imk%20p/blog%20pribadi/index.html">HOME</a></li>
-                <li><a href="file:///F:/imk%20p/blog%20pribadi/ABOUT.html">ABOUT</a></li>
-                <li><a href="file:///F:/imk%20p/blog%20pribadi/SERVICE.html">SERVICES</a></li>
-                <li><a href="file:///F:/imk%20p/blog%20pribadi/CONTACT.html">CONTACT</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="ABOUT.html">ABOUT</a></li>
+                <li><a href="SERVICE.html">SERVICES</a></li>
+                <li><a href="CONTACT.html">CONTACT</a></li>
             </ul>
             <button class="action-btn">TAKE ACTION</button>
         </nav>
