--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="ABOUT.html">ABOUT</a></li>
-                <li><a href="file:///F:/imk%20p/blog%20pribadi/SERVICE.html">SERVICES</a></li>
-                <li><a href="file:///F:/imk%20p/blog%20pribadi/CONTACT.html">CONTACT</a></li>
+                <li><a href="SERVICE.html">SERVICES</a></li>
+                <li><a href="CONTACT.html">CONTACT</a></li>
             </ul>
             <button class="action-btn">TAKE ACTION</button>
         </nav>
