--- a/SERVICE.html
+++ b/SERVICE.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SERVICE - DaoVibes</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="halaman.css">
 </head>
 <body>
     <!-- Header -->
@@ -72,18 +72,18 @@
           <div>
               <h4>tentang kami:</h4>
               <ul>
-                  <li><a href="file:///F:/imk%20p/blog%20pribadi/index.html">profil website</a></li>
-                  <li><a href="file:///F:/imk%20p/blog%20pribadi/SERVICE.html">baca artikel</a></li>
-                  <li><a href="file:///F:/imk%20p/blog%20pribadi/index.html">home</a></li>
-                  <li><a href="file:///F:/imk%20p/blog%20pribadi/SERVICE.html">media</a></li>
+                  <li><a href="index.html">profil website</a></li>
+                  <li><a href="SERVICE.html">baca artikel</a></li>
+                  <li><a href="index.html">home</a></li>
+                  <li><a href="SERVICE.html">media</a></li>
               </ul>
           </div>
           <div>
               <h4>menghubungkan:</h4>
               <ul>
-                  <li><a href="file:///F:/imk%20p/blog%20pribadi/SERVICE.html">portal pelanggan</a></li>
-                  <li><a href="file:///F:/imk%20p/blog%20pribadi/index.html">website</a></li>
-                  <li><a href="file:///F:/imk%20p/blog%20pribadi/SERVICE.html">ketahui lebih banyak</a></li>
+                  <li><a href="SERVICE.html">portal pelanggan</a></li>
+                  <li><a href="index.html">website</a></li>
+                  <li><a href="SERVICE.html">ketahui lebih banyak</a></li>
               </ul>
           </div>
       </div>
