--- a/CONTACT.html
+++ b/CONTACT.html
@@ -17,7 +17,9 @@
                 <li><a href="SERVICE.html">SERVICES</a></li>
                 <li><a href="CONTACT.html">CONTACT</a></li>
             </ul>
-            <button class="action-btn">TAKE ACTION</button>
+            <a href="#CONTACT">
+    <button class="action-btn">TAKE ACTION</button>
+</a>
         </nav>
         <div class="hero-content">
             <h1>CONTACT US</h1> 
