--- a/SERVICE.html
+++ b/SERVICE.html
@@ -53,7 +53,7 @@
                 dan segala hal yang perlu Anda<br>
                 ketahui tentang buku dan film."<br>
               </p>
-              <a href="#" class="btn">FIND OUT MORE</a>
+              <a href="#REVIEW" class="btn">FIND OUT MORE</a>
             </div>
           </div>
         </div>
