--- a/ABOUT.html
+++ b/ABOUT.html
@@ -17,7 +17,7 @@
                 <li><a href="SERVICE.html">SERVICES</a></li>
                 <li><a href="CONTACT.html">CONTACT</a></li>
             </ul>
-            <button class="action-btn">TAKE ACTION</button>
+            <a href="CONTACT.html" target="_blank"><button>TAKE ACTION</button></a>
         </nav>
         <div class="hero-content">
             <h1>ABOUT US</h1>
