--- a/ABOUT.html
+++ b/ABOUT.html
@@ -17,7 +17,7 @@
                 <li><a href="SERVICE.html">SERVICES</a></li>
                 <li><a href="CONTACT.html">CONTACT</a></li>
             </ul>
-            <a href= "CONTACT.html"target="action-btn">TAKE ACTION</button></a>
+           <button class="action-btn">TAKE ACTION</button>
         </nav>
         <div class="hero-content">
             <h1>ABOUT US</h1>
