--- a/SERVICE.html
+++ b/SERVICE.html
@@ -39,7 +39,7 @@
                 populer—hanya di DaoVibes,<br> 
                 pusat segala hal yang menyenangkan dan menarik."<br>
               </p>
-              <a href="#" class="btn">FIND OUT MORE</a>
+              <a href="SHARING.html" class="btn">FIND OUT MORE</a>
             </div>
           </div>
           <div class="service-item reverse">
