--- a/CONTACT.html
+++ b/CONTACT.html
@@ -31,6 +31,7 @@
              kolaborasi,jangan ragu untuk menghubungi <br>
              kami melalui formulir atau detail di bawah ini."
           </p>
+            <div class="contact-details">
             <div class="contact-form">
               <h2>Let's get in touch</h2>
               <form action="#" method="post">
