--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="SERVICE.html">SERVICES</a></li>
                 <li><a href="CONTACT.html">CONTACT</a></li>
             </ul>
-            <button class="action-btn">TAKE ACTION</button>
+            <a href="CONTACT.html"> <button class="action-btn">TAKE ACTION</button></a>
         </nav>
         <div class="hero-content">
             <h1>PECINTA DUNIA HIBURAN</h1>
@@ -94,7 +94,7 @@
     <p class="question-text">
         "Apakah Anda punya pertanyaan, ide, atau cerita menarik untuk dibagikan? Jangan ragu untuk menghubungi kami melalui halaman kontak! Kami selalu senang mendengar dari Anda dan menjawab semua pertanyaan"
     </p>
-    <button class="btn">LET'S TALK NOW</button>
+   <a href="SERVICE.html"> <button class="btn">LET'S TALK NOW</button></a>
 </section>
 <!-- Footer -->
 <footer class="footer">
