--- a/CONTACT.html
+++ b/CONTACT.html
@@ -16,8 +16,8 @@
                 <li><a href="ABOUT.html">ABOUT</a></li>
                 <li><a href="SERVICE.html">SERVICES</a></li>
                 <li><a href="CONTACT.html">CONTACT</a></li>
-            </ul>    
-    <button class="action-btn">TAKE ACTION</button>
+            </ul> 
+            <a href="CONTACT.html"><button class="action-btn">TAKE ACTION</button><a/>
         </nav>
         <div class="hero-content">
             <h1>CONTACT US</h1> 
