--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>Lihat dan jelajahi dunia hiburan di<br>
                  website ini dan anda akan memahami<br>
                  segalanya dengan baik!</p>
-            <button class="cta-btn">GET STARTED</button>
+            <a href="SERVICE.html"><button class="cta-btn">GET STARTED</button></a>
         </div>
     </header>
 
