--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <p class="question-text">
         "Apakah Anda punya pertanyaan, ide, atau cerita menarik untuk dibagikan? Jangan ragu untuk menghubungi kami melalui halaman kontak! Kami selalu senang mendengar dari Anda dan menjawab semua pertanyaan"
     </p>
-   <a href="SERVICE.html"> <button class="btn">LET'S TALK NOW</button></a>
+   <a href="CONTACT.html"> <button class="btn">LET'S TALK NOW</button></a>
 </section>
 <!-- Footer -->
 <footer class="footer">
