--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p>
                 "Tunjukkan passion Anda di dunia hiburan bersama DaoVibes! Dari kisah selebriti, ulasan film dan musik, hingga rekomendasi jajanan favorit, DaoVibes hadir untuk memberikan inspirasi dan informasi seru yang selalu segar. Temukan hiburan terbaik di satu tempat yang dirancang untuk Anda!"
             </p>
-            <button class="btn">FIND OUT MORE</button>
+            <a href="ABOUT.html"> <button class="btn">FIND OUT MORE</button></a>
         </div>
         <div class="image-content">
             <img src="r.jpg" alt="Library" class="about-img">
